go back to hpcc

--- a/confs/citeseer/nagphormer.yaml
+++ b/confs/citeseer/nagphormer.yaml
@@ -3,18 +3,19 @@ wandb: 8755378737220049e53e8cc28a0d5ac2608abcdf
 dataset:
   planetoid_high: true
   loader: 'torch'
+  name: 'citeseer'
 train:
-  lr: 0.01
+  lr: 0.001
   batch_size: 1024
   num_epochs: 2000
   optim: 'adamW'
   scheduler: 'PolynomialDecayLR'
 model:
   name: 'NAGPhormer'
-  feature_prop_hop: 3
+  feature_prop_hop: 7
   nhead: 8
   hidden_dim: 512
-  dropout: 0.1
+  dropout: 0.3
   attention_dropout: 0.1
   nlayer_gt: 1
   gt:
